--- a/angular-cats/angular-cats/src/app/components/cat/cat.component.css
+++ b/angular-cats/angular-cats/src/app/components/cat/cat.component.css
@@ -1,7 +1,10 @@
-.cat-card {
+.centered {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
+  justify-content: center;
+}
+
+.cat-card {
   max-width: 350px;
   margin: 15px;
 }
